Feat/135 team event participant info (#136)
* feat(event): implement teamEventGetResponseDto #135

* feat(event): update team event service & controller logic #135

* feat(test): update test code #135